# NCPrePatcher

./: .gitignore  Gemfile  README.md  ncpp.gemspec  ncpp.rb
.github/workflows/: build.yml
example/: README.md  disasm.rb
exe/: ncpp
ext/: build.rb
ext/keystone/triplets/: arm64-osx-dynamic.cmake  x64-linux-dynamic.cmake  x64-osx-dynamic.cmake  x64-windows.cmake
ext/nitro/: CMakeLists.txt  armbin.cpp  armbin.hpp  blz.cpp  blz.hpp  c_api.cpp  common.hpp  headerbin.cpp  headerbin.hpp  icodebin.hpp  overlaybin.cpp  overlaybin.hpp  rom.cpp  rom.hpp  types.hpp
ext/unarm/: Cargo.toml
ext/unarm/disasm/: Cargo.toml
ext/unarm/disasm/src/: lib.rs  ncpp_api.rs
ext/unarm/src/: lib.rs
ext/unicorn/triplets/: arm64-osx-dynamic.cmake  x64-linux-dynamic.cmake  x64-osx-dynamic.cmake  x64-windows.cmake
lib/: ncpp.rb  nitro.rb  unarm.rb  utils.rb
lib/keystone/: arm_const.rb  keystone.rb  keystone_const.rb  version.rb
lib/ncpp/: commands.rb  interpreter.rb  parser.rb  types.rb  utils.rb  version.rb
lib/nitro/: nitro.rb
lib/unarm/: unarm.rb
lib/unicorn/: arm_const.rb  unicorn.rb  unicorn_const.rb
